unpackaged/main/default/objects/GSR_Time_To_Restore_PR__c/GSR_Time_To_Restore_PR__c.object-meta.xml
<CustomObject>
    <label>Time To Restore Pull Request</label>
    <nameField>
        <displayFormat>GSTRPR-{0000000}</displayFormat>
        <label>Time To Restore Pull Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time To Restore Pull Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>