unpackaged/main/default/objects/GSR_Time_To_Restore_PR__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <label>Author Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>