unpackaged/main/default/objects/GSR_Time_To_Restore_PR__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <label>Deployment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>