unpackaged/main/default/objects/GSR_Time_To_Restore_PR__c/fields/Deployment_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Time__c</fullName>
    <label>Deployment Time</label>
    <type>DateTime</type>
</CustomField>