unpackaged/main/default/objects/GSR_Time_To_Restore_PR__c/fields/PR_Created_At__c.field-meta.xml
<CustomField>
    <fullName>PR_Created_At__c</fullName>
    <label>PR Created At</label>
    <type>DateTime</type>
</CustomField>